--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     function onTelegramAuth(user) {
       console.log({ user })
       const userDetailsCompoenent = document.getElementById('telegram_user_details')
-      userDetailsCompoenent.innerText = `<a href="https://combot.org/c/-1001362720327/a" >
+      userDetailsCompoenent.innerHTML = `<a href="https://combot.org/c/-1001362720327/a" >
         [Logged in as ${user.first_name}  ${user.last_name} ${user.id} ${user.username}] 
         </a>`
 
